# atomata-and-regular-expressions

./: CMakeLists.txt  README.md  automatic_machine.h  main.cpp  normolized_automatic_machine.h  sourse.cpp
src/: automatic_machine.cpp  automatic_machine.h  normolized_automatic_machine.cpp  normolized_automatic_machine.h
tests/: input_test_create_DFA_to_string.txt  input_test_create_to_string1.txt  input_test_create_to_string2.txt  test_DFA.cpp  test_MDFA.cpp  test_NFA.cpp  test_creating_from_reg_exp.cpp  test_returning_reg_exp.cpp
